--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "amazon-chime-sdk-js",
-  "version": "2.24.0",
+  "name": "@andreisergiu98/amazon-chime-sdk-js",
+  "version": "2.25.0",
   "description": "Amazon Chime SDK for JavaScript",
   "main": "build/index.js",
   "types": "build/index.d.ts",
@@ -13,6 +13,10 @@
   "engines": {
     "node": "^12 || ^14 || ^15 || ^16",
     "npm": "^6 || ^7 || ^8"
+  },
+  "publishConfig": {
+    "access": "public",
+    "registry": "https://registry.npmjs.org/"
   },
   "scripts": {
     "clean": "rimraf .nyc_output build node_modules",
